kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: info-app-service
spec:
  selector:
    app: info-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
